--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-__pycache__
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+*.egg-info/
+.Python
+.venv/
+venv/
+env/
+build/
+dist/
+*.log
+.mypy_cache/
+.pytest_cache/
+.ruff_cache/
 ./results/*
+data/
+results/
+objaverse_processed/
