--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy>=1.21.0
+numpy>=1.21.0,<2  # bpy (Blender) requires NumPy 1.x
 openai>=1.0.0
 torch>=1.9.0
 scipy>=1.7.0
@@ -18,3 +18,4 @@ requests>=2.28.0
 bpy>=3.6.0  # Blender Python API
 trimesh>=3.9.0  # For 3D mesh processing
 mathutils
+matplotlib
